# python-template

./: README.md  pyproject.toml
.github/workflows/: check.yml  release.yml  test.yml
